--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
         <div class="carousel-item active" data-interval="50000">
           <h3 class="test-head">"All the logos created by the team were phenomenal. The design was appreciated even by the delegates.
             Posters & certificates were also well designed. The work was completed on time & exceeded our expectations ! "</h3>
-          <img class="senatus" src="Images/senatus.png" alt="Senatus MUN">
+          <img class="senatus" src="images/senatus.png" alt="Senatus MUN">
           <p class="test-para">Senatus Model United Nations <br> <em>(See our work <a class="test-link" href="https://www.instagram.com/senatusmodelun/"> here</a>)</em></p>
         </div>
         <div class="carousel-item" data-interval="50000">
           <h3 class="test-head">"The video was made perfectly according to our needs. All necessary and required revisions were also made
             immediately. The team at 2Bit was in constant communication with us which made it easier to suggest quick modifications."</h3>
-          <img class="buland" src="Images/bulandindia.png" alt="Buland India">
+          <img class="buland" src="images/bulandindia.png" alt="Buland India">
           <p class="test-para">Buland Udaan <br> <em>(See our work <a class="test-link" href="https://www.youtube.com/watch?v=bKWqk5bgHBg&feature=youtu.be">here</a>)</em> </p>
         </div>
       </div>
