--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h3 class="test-head">"The video was made perfectly according to our needs. All necessary and required revisions were also made
             immediately. The team at 2Bit was in constant communication with us which made it easier to suggest quick modifications."</h3>
           <img class="buland" src="images/bulandindia.png" alt="Buland India">
-          <p class="test-para">Buland Udaan <br> <em>(See our work <a class="test-link" href="https://www.youtube.com/watch?v=bKWqk5bgHBg&feature=youtu.be">here</a>)</em> </p>
+          <p class="test-para">Buland Udaan <br> <em>(See our work <a class="test-link" href="https://www.youtube.com/watch?v=pfOC0ykUGkE">here</a>)</em> </p>
         </div>
       </div>
       <a class="carousel-control-prev" href="#comments" role="button" data-slide="prev">
